# CurrentMeter

./: Cargo.toml  README.md  rust-toolchain.toml
.cargo/: config.toml
app_core/: Cargo.toml
app_core/src/: adc_converter.rs  constants.rs  hardware_traits.rs  lib.rs  modbus.rs
app_core/src/tests/: adc_converter_tests.rs  mod.rs  modbus_tests.rs
app_firmware/: Cargo.toml
app_firmware/src/: constants.rs  main.rs
app_firmware/src/hardware/: init.rs  leds.rs  mod.rs  modem.rs  sensors.rs  utils.rs
polling/: polling.py
