[workspace]
members = [
    "app_core",
    "app_firmware",
]
resolver = "2"

[workspace.package]
edition = "2024"
version = "0.1.0"
license = "MIT OR Apache-2.0"
authors = ["TiaTaiT"]

[workspace.dependencies]
panic-halt = "1.0"
cortex-m = "0.7"
cortex-m-rt = "0.7"
critical-section = { version = "1.2", features = ["restore-state-u8"] }
embedded-hal = "1.0"
static_cell = "2"

[profile.dev]
debug = 2
lto = false
opt-level = 1

[profile.release]
codegen-units = 1
debug = 2
lto = true
opt-level = "z"