[package]
name = "app_firmware"
version.workspace = true
edition.workspace = true
license.workspace = true

[dependencies]
defmt = "1.1.0"
defmt-rtt = "1.2"
app_core = { path = "../app_core" }
cortex-m.workspace = true
cortex-m-rt.workspace = true
critical-section.workspace = true
panic-halt.workspace = true
static_cell.workspace = true
embassy-executor = { version = "0.10.0", features = ["executor-thread", "platform-cortex-m"] }
embassy-time = { version = "0.5", default-features = false, features = ["tick-hz-32_768"] }
embassy-stm32 = { version = "0.6", default-features = false, features = ["time-driver-any", "time", "exti", "stm32f051r8", "memory-x"] }

[[bin]]
name = "app_firmware"
path = "src/main.rs"
test = false
bench = false
